--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -95,6 +95,7 @@
                             "id": "HAS001",
                             "description": "Home Assistant open source home automation",
                             "short": "Home Assistant",
+                            "module": "module_haos",
                             "about": "This operation will install Home Assistant.",
                             "command": [
                                 "module_haos install"
@@ -685,6 +686,7 @@
                             "id": "DOW001",
                             "description": "qBittorrent BitTorrent client ",
                             "short": "qBittorrent",
+                            "module": "module_qbittorrent",
                             "about": "This operation will install qBittorrent BitTorrent client",
                             "command": [
                                 "module_qbittorrent install"
@@ -719,6 +721,7 @@
                             "id": "DEL001",
                             "description": "Deluge BitTorrent client",
                             "short": "Deluge",
+                            "module": "module_deluge",
                             "about": "This operation will install BitTorrent client",
                             "command": [
                                 "module_deluge install"
@@ -753,6 +756,7 @@
                             "id": "TRA001",
                             "description": "Transmission BitTorrent client",
                             "short": "Transmission",
+                            "module": "module_transmission",
                             "about": "This operation will install Transmission BitTorrent client",
                             "command": [
                                 "module_transmission install"
@@ -787,6 +791,7 @@
                             "id": "SABN01",
                             "description": "SABnzbd newsgroup downloader",
                             "short": "SABnzbd",
+                            "module": "module_sabnzbd",
                             "about": "This operation will install SABnzbd newsgroup downloader",
                             "command": [
                                 "module_sabnzbd install"
@@ -821,6 +826,7 @@
                             "id": "MDS001",
                             "description": "Medusa automatic downloader for TV shows",
                             "short": "Medusa",
+                            "module": "module_medusa",
                             "about": "This operation will install Medusa TV shows downloader",
                             "command": [
                                 "module_medusa install"
@@ -855,6 +861,7 @@
                             "id": "SON001",
                             "description": "Sonarr automatic downloader for TV shows",
                             "short": "Sonarr",
+                            "module": "module_sonarr",
                             "about": "This operation will install Sonarr PVR for Usenet and BitTorrent",
                             "command": [
                                 "module_sonarr install"
@@ -889,6 +896,7 @@
                             "id": "RAD001",
                             "description": "Radarr automatic downloader for movies",
                             "short": "Radarr",
+                            "module": "module_radarr",
                             "about": "This operation will install Radarr movie collection manager",
                             "command": [
                                 "module_radarr install"
@@ -923,6 +931,7 @@
                             "id": "BAZ001",
                             "description": "Bazarr automatic subtitles downloader for Sonarr and Radarr",
                             "short": "Bazarr",
+                            "module": "module_bazarr",
                             "about": "This operation will install Bazarr subtitles manager for Sonarr and Radarr",
                             "command": [
                                 "module_bazarr install"
@@ -957,6 +966,7 @@
                             "id": "LID001",
                             "description": "Lidarr automatic music downloader",
                             "short": "Lidarr",
+                            "module": "module_lidarr",
                             "about": "This operation will install Lidarr music collection manager for Usenet and BitTorrent users",
                             "command": [
                                 "module_lidarr install"
@@ -991,6 +1001,7 @@
                             "id": "RDR001",
                             "description": "Readarr automatic downloader for Ebooks",
                             "short": "Readarr",
+                            "module": "module_readarr",
                             "about": "This operation will install Readarr",
                             "command": [
                                 "module_readarr install"
@@ -1025,6 +1036,7 @@
                             "id": "DOW025",
                             "description": "Prowlarr index manager and proxy for PVR",
                             "short": "Prowlarr",
+                            "module": "module_prowlarr",
                             "about": "This operation will install Prowlarr",
                             "command": [
                                 "module_prowlarr install"
@@ -1059,6 +1071,7 @@
                             "id": "JEL001",
                             "description": "Jellyseerr Jellyfin/Emby/Plex integration install",
                             "short": "Jellyseerr",
+                            "module": "module_jellyseerr",
                             "about": "This operation will install Jellyseerr",
                             "command": [
                                 "module_jellyseerr install"
@@ -1239,6 +1252,7 @@
                             "id": "ART001",
                             "description": "Router for repository mirror automation",
                             "short": "CDN router",
+                            "module": "module_generic",
                             "command": [
                                 "module_armbianrouter install"
                             ],
@@ -1260,6 +1274,7 @@
                             "id": "GHR001",
                             "description": "GitHub runners for Armbian automation",
                             "short": "GH runners",
+                            "module": "module_generic",
                             "command": [
                                 "module_armbian_runners install"
                             ],
@@ -1281,6 +1296,7 @@
                             "id": "RSD001",
                             "description": "Rsyncd server",
                             "short": "Rsyncd server",
+                            "module": "module_generic",
                             "command": [
                                 "module_armbian_rsyncd install"
                             ],
@@ -1308,6 +1324,7 @@
                             "id": "GIT001",
                             "description": "Install tools for cloning and managing repositories (git)",
                             "short": "Git CLI",
+                            "module": "module_generic",
                             "command": [
                                 "get_user_continue \"This operation will install git.\n\nDo you wish to continue?\" process_input",
                                 "pkg_install git"
@@ -1455,7 +1472,7 @@
                         {
                             "id": "EMB001",
                             "description": "Emby organizes video, music, live TV, and photos",
-                            "short": "Emby",
+                            "short": "Emby",                            
                             "module": "module_embyserver",
                             "about": "This operation will install Emby server.",
                             "command": [
@@ -1490,6 +1507,7 @@
                             "id": "STR001",
                             "description": "Stirling PDF tools for viewing and editing PDF files",
                             "short": "Stirling",
+                            "module": "module_stirling",
                             "about": "This operation will install Stirling-PDF tools.",
                             "command": [
                                 "module_stirling install"
@@ -1524,6 +1542,7 @@
                             "id": "STC001",
                             "description": "Syncthing continuous file synchronization",
                             "short": "Syncthing",
+                            "module": "module_syncthing",
                             "command": [
                                 "module_syncthing install"
                             ],
@@ -1555,6 +1574,7 @@
                             "id": "NCT001",
                             "description": "Nextcloud content collaboration platform",
                             "short": "Nextcloud",
+                            "module": "module_nextcloud",
                             "command": [
                                 "module_nextcloud install"
                             ],
@@ -1586,6 +1606,7 @@
                             "id": "OWC001",
                             "description": "Owncloud share files and folders, easy and secure",
                             "short": "Owncloud",
+                            "module": "module_owncloud",
                             "command": [
                                 "module_owncloud install"
                             ],
@@ -1617,6 +1638,7 @@
                             "id": "JMS001",
                             "description": "Jellyfin Media System",
                             "short": "Jellyfin",
+                            "module": "module_jellyfin",
                             "command": [
                                 "module_jellyfin install"
                             ],
@@ -1648,6 +1670,7 @@
                             "id": "HPS001",
                             "description": "Hastebin Paste Server",
                             "short": "Hastebin",
+                            "module": "module_hastebin",
                             "command": [
                                 "module_hastebin install"
                             ],
@@ -1679,6 +1702,7 @@
                             "id": "IMM001",
                             "description": "Immich - high-performance self-hosted photo and video backup solution",
                             "short": "Immich",
+                            "module": "module_immich",
                             "about": "This operation will install Immich server with dependencies (PostgreSQL and Redis).",
                             "command": [
                                 "module_immich install"
@@ -1754,6 +1778,7 @@
                             "id": "NTD001",
                             "description": "Netdata - monitoring real-time metrics",
                             "short": "Netdata",
+                            "module": "module_netdata",
                             "about": "This operation will install Netdata",
                             "command": [
                                 "module_netdata install"
@@ -1788,6 +1813,7 @@
                             "id": "GRA001",
                             "description": "Grafana data analytics",
                             "short": "Grafana",
+                            "module": "module_grafana",
                             "prompt": "This operation will install Grafana.",
                             "command": [
                                 "module_grafana install"
@@ -1822,6 +1848,7 @@
                             "id": "PRO001",
                             "description": "Prometheus docker image",
                             "short": "Prometheus",
+                            "module": "module_prometheus",
                             "prompt": "This operation will install Prometheus.",
                             "command": [
                                 "module_prometheus install"
@@ -1856,6 +1883,7 @@
                             "id": "NAX001",
                             "description": "NetAlertX network scanner & notification framework",
                             "short": "NetAlertX",
+                            "module": "module_netalertx",
                             "prompt": "This operation will install NetAlertX.",
                             "command": [
                                 "module_netalertx install"
@@ -1896,6 +1924,7 @@
                             "id": "CPT001",
                             "description": "Cockpit web-based management tool",
                             "short": "Cockpit",
+                            "module": "module_generic",
                             "command": [
                                 "see_menu module_cockpit"
                             ],
@@ -1907,6 +1936,7 @@
                             "id": "SMB001",
                             "description": "SAMBA Remote File share",
                             "short": "Samba",
+                            "module": "module_generic",
                             "command": [
                                 "see_menu module_samba"
                             ],
@@ -1918,6 +1948,7 @@
                             "id": "WBM001",
                             "description": "Webmin web-based management tool",
                             "short": "Webmin",
+                            "module": "module_generic",
                             "command": [
                                 "see_menu module_webmin"
                             ],
@@ -1929,6 +1960,7 @@
                             "id": "HPG001",
                             "description": "Install Homepage startpage / application dashboard",
                             "short": "Homepage",
+                            "module": "module_homepage",
                             "command": [
                                 "module_homepage install"
                             ],
@@ -1960,6 +1992,7 @@
                             "id": "NBOX01",
                             "description": "NetBox infrastructure resource modeling install",
                             "short": "NetBox",
+                            "module": "module_netbox",
                             "about": "This operation will install NetBox, an infrastructure resource modeling (IPAM/DCIM) tool",
                             "command": [
                                 "module_netbox install"
@@ -1998,8 +2031,9 @@
                     "sub": [
                         {
                             "id": "OCT001",
-                            "description": "OctoPrint web-based 3D printers management tool",
+                            "description": "OctoPrint web-based 3D printers management tool",                            
                             "short": "OctoPrint",
+                            "module": "module_octoprint",
                             "about": "This operation will install OctoPrint",
                             "command": [
                                 "module_octoprint install"
@@ -2040,6 +2074,7 @@
                             "id": "NLD001",
                             "description": "nload - realtime console network usage monitor",
                             "short": "nload",
+                            "module": "module_netbox",
                             "prompt": "This operation will install nload.",
                             "command": [
                                 "pkg_install nload"
@@ -2063,6 +2098,7 @@
                             "id": "IPR001",
                             "description": "iperf3 bandwidth measuring tool",
                             "short": "iperf3",
+                            "module": "module_netbox",
                             "prompt": "This operation will install iperf3.",
                             "command": [
                                 "pkg_install iperf3"
@@ -2086,6 +2122,7 @@
                             "id": "IPT001",
                             "description": "iptraf-ng IP LAN monitor",
                             "short": "iptraf-ng",
+                            "module": "module_netbox",
                             "prompt": "This operation will install iptraf-ng.",
                             "command": [
                                 "pkg_install iptraf-ng"
@@ -2109,6 +2146,7 @@
                             "id": "AVH001",
                             "description": "avahi-daemon hostname broadcast via mDNS",
                             "short": "avahi-daemon",
+                            "module": "module_netbox",
                             "prompt": "This operation will install avahi-daemon.",
                             "command": [
                                 "pkg_install avahi-daemon libnss-mdns",
@@ -2142,6 +2180,7 @@
                             "id": "WRG001",
                             "description": "WireGuard VPN client / server",
                             "short": "WireGuard",
+                            "module": "module_wireguard",
                             "command": [
                                 "module_wireguard install"
                             ],
