Remove OMV after test install

--- a/tests/omv.conf
+++ b/tests/omv.conf
@@ -8,4 +8,5 @@ testcase() {(
 	./bin/armbian-config --api module_omv install
 	sudo systemctl start openmediavault-engined.service
 	sudo systemctl is-active --quiet openmediavault-engined.service
+	./bin/armbian-config --api module_omv remove
 )}
