Enable tests, fix wrong ARCH condition and improve post install detection

--- a/tests/homeassistant.conf
+++ b/tests/homeassistant.conf
@@ -1,9 +1,10 @@
-ENABLED=false
+ENABLED=true
 RELEASE="bookworm"
 TESTNAME="Home Assistant install"
 
 testcase() {(
 	set -e
+	./bin/armbian-config --api module_armbian_firmware repository rolling
 	./bin/armbian-config --api module_haos install
 	./bin/armbian-config --api module_haos status
 )}
