Improve first time welcome text

--- a/.github/workflows/issue-welcome-first-time.yml
+++ b/.github/workflows/issue-welcome-first-time.yml
@@ -15,10 +15,12 @@ jobs:
         with:
           labels: "Good first issue"
           issue-opened-msg: |
-            ### Hey @{fc-author} !
+            ### Hey @{fc-author}! 👋
 
-            Looks like it's your first time interacting with Armbian here on GitHub.
+            Thanks for opening your first issue with the Armbian project — we’re glad to have you here! 🧡  
+            Your input doesn’t just help us improve the project — it benefits everyone who uses Armbian.
 
-            Welcome and thank you for taking the time to report an issue :heart:.
+            If you’d like to stay informed about updates or collaborate more closely with the team,  
+            you can optionally share basic system info at [armbian.com/update-data](https://www.armbian.com/update-data/).
 
-            Don't forget to star :star: the repo.
+            Also, don’t forget to ⭐ star the repo to support the work — and welcome aboard! 🚀
