--- a/.github/workflows/issue-welcome-first-time.yml
+++ b/.github/workflows/issue-welcome-first-time.yml
@@ -20,7 +20,8 @@ jobs:
             Thanks for opening your first issue with the Armbian project — we’re glad to have you here! 🧡  
             Your input doesn’t just help us improve the project — it benefits everyone who uses Armbian.
 
-            If you’d like to stay informed about updates or collaborate more closely with the team,  
-            you can optionally share basic system info at [armbian.com/update-data](https://www.armbian.com/update-data/).
+            If you'd like to stay informed about project updates or collaborate more closely with the team,  
+            you can optionally share some personal contact preferences at [armbian.com/update-data](https://www.armbian.com/update-data/).  
+            This helps us keep in touch without relying solely on GitHub notifications.
 
             Also, don’t forget to ⭐ star the repo to support the work — and welcome aboard! 🚀
